--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,14 +7,61 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+
+    <EditText
+            android:id="@+id/pokemo_query_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/text_pokemon_name_or_id"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/action_search_pokemon"
+            android:layout_marginEnd="16dp">
+
+    </EditText>
+
     <Button
-            android:id="@+id/action_click"
+            android:id="@+id/action_search_pokemon"
+            android:text="@string/text_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Click me!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintStart_toEndOf="@+id/pokemo_query_text"
+            app:layout_constraintTop_toTopOf="@+id/pokemo_query_text"
+            app:layout_constraintBottom_toBottomOf="@+id/pokemo_query_text">
 
-</android.support.constraint.ConstraintLayout>
+    </Button>
+
+    <TextView
+            android:id="@+id/pokemon_name_text"
+            android:text="@string/text_pokemon_name"
+            android:textSize="24sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.45"
+            app:layout_constraintTop_toBottomOf="@+id/pokemo_query_text"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_pokemon_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pokemon_name_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintVertical_bias="0.05" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
